# SIMKey_Example

./: .gitignore  settings.gradle
app/: build.gradle  test.keystore
app/libs/: channel-1.0.1.aar
app/src/androidTest/java/com/qasky/simkey_example/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/qasky/simkey_example/: App.java  MainActivity.java
app/src/main/java/com/qasky/simkey_example/dto/: CleanOLBizKeyReq.java  CleanOLBizKeyResp.java  CreateOLBizKeyReq.java  CreateOLBizKeyResp.java  ExtServerConsultInfo.java  ExtSyncQKeykInfoDto.java  OnLineNegoInfo.java  RestResult.java  SvrNegoOLBizKeyReq.java  SvrNegoOLBizKeyResp.java
app/src/main/java/com/qasky/simkey_example/gm/: SM3Util.java  SM4Util.java
app/src/main/java/com/qasky/simkey_example/okhttp/: OkHttpUtil.java  TrustAllManager.java
app/src/main/res/layout/: activity_main.xml  dialog_params.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/qasky/simkey_example/: ExampleUnitTest.java
doc/: 集成说明.docx
gradle/wrapper/: gradle-wrapper.properties
simkey_nativelib/: build.gradle
simkey_nativelib/src/main/: AndroidManifest.xml
simkey_nativelib/src/main/cpp/: CMakeLists.txt  cJSON.c  qcard.cpp  sdmp.cpp
simkey_nativelib/src/main/cpp/include/: cJSON.h  log.h  skfapi.h
simkey_nativelib/src/main/cpp/include/libqhid/: qcard.h  qcard_error.h  qcard_skf.h  qcard_store.h  qcard_type.h
simkey_nativelib/src/main/cpp/include/libsdmp/: qsdk.h  qsdk_type.h
simkey_nativelib/src/main/java/com/qasky/simkey_nativelib/qcard/: Application.java  NegotiateInfo.java  QCard.java
simkey_nativelib/src/main/java/com/qasky/simkey_nativelib/sdmp/: Cert.java  Result.java  SDMP.java
